tools/architecture/validate-source-imports/tests/fixtures/invalid/unresolved-relative-via-ts-resolver/src/index.ts
import { missing } from "./missing-utils";
export { missing };
